# Personal-Knowledge-Base

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: alembic.ini
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py
apps/api/src/pkb_api/: __init__.py  backends.py  db.py  ingestion_service.py  main.py  models.py  reranker.py  retrieval.py  schemas.py  services.py  settings.py  storage.py
apps/web/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/documents/: page.tsx
apps/web/components/: ChatPanel.tsx  DeleteButton.tsx  DocumentList.tsx  DocumentUploader.tsx  Nav.tsx
apps/web/lib/: api.ts
docs/: architecture.md  implementation-plan.md
infra/: docker-compose.yml
scripts/: dev_api.py
tests/api/: test_api_schemas.py  test_backends.py  test_main.py  test_models.py  test_reranker.py  test_retrieval.py  test_streaming.py  test_wiring.py
tests/ingestion/: test_chunker.py  test_embeddings.py  test_index_contracts.py  test_markdown_ast.py  test_pdf_converter.py  test_pipeline.py  test_tokens.py
tests/integration/: test_local_models.py
