[project]
name = "personal-knowledge-base"
version = "0.1.0"
description = "Local personal knowledge base with document ingestion, hybrid retrieval, and cited RAG answers."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "qdrant-client>=1.11,<1.12",
    "opensearch-py>=2.6.0",
    "pymupdf>=1.24.0",
    "markdown-it-py>=3.0.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "apps/api/src",
    "packages/ingestion/src",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection callables are safe to use as argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
]
